update dockerfile to continue using the bash script but keeping python code

--- a/serverless/doc-reader/.aws-sam/auto-dependency-layer/template.yaml
+++ b/serverless/doc-reader/.aws-sam/auto-dependency-layer/template.yaml
@@ -212,10 +212,9 @@ Resources:
             s3Key: $.detail.object.key
           InputTemplate:
             Fn::Sub: "{\n  \"containerOverrides\": [\n    {\n      \"name\": \"${ProjectName}\"\
-              ,\n      \"environment\": [\n        {\n          \"name\": \"INPUT_S3_BUCKET\"\
-              ,\n          \"value\": \"<bucket>/<s3Key>\"\n        },\n        {\n\
-              \          \"name\": \"OUTPUT_S3_URI_PREFIX\",\n          \"value\"\
-              : \"<bucket>/<s3Key>\"\n        }\n      ]\n    }\n  ]\n}\n"
+              ,\n      \"environment\": [\n        {\n          \"name\": \"S3_URI\"\
+              ,\n          \"value\": \"s3://<bucket>/<s3Key>\"\n        }\n     \
+              \ ]\n    }\n  ]\n}\n"
 Outputs:
   EcrRepositoryUri:
     Description: The URI of the ECR repository for the doc-reader image
