--- a/core-infra/template.yaml
+++ b/core-infra/template.yaml
@@ -38,89 +38,62 @@ Resources:
         EventBridgeConfiguration:
           EventBridgeEnabled: true
 
-  OutputBucket:
-    Type: AWS::S3::Bucket
-    Properties:
-      BucketName: !Sub "${ProjectName}-output-bucket-${AWS::AccountId}-${AWS::Region}"
-      PublicAccessBlockConfiguration:
-        BlockPublicAcls: true
-        BlockPublicPolicy: true
-        IgnorePublicAcls: true
-        RestrictPublicBuckets: true
+#  AuroraCluster:
+#    Type: AWS::RDS::DBCluster
+#    Properties:
+#      DBClusterIdentifier: !Sub "${ProjectName}-postgres-cluster"
+#      Engine: aurora-postgresql
+#      EngineVersion: 16.6
+#      DatabaseName: !Ref DatabaseName
+#      MasterUsername: finance_docs
+#      ManageMasterUserPassword: true
+#      EnableHttpEndpoint: true
+#      ServerlessV2ScalingConfiguration:
+#        MinCapacity: !Ref MinCapacity
+#        MaxCapacity: !Ref MaxCapacity
+#      DeletionProtection: false
+#      Tags:
+#        - Key: Name
+#          Value: !Sub "${ProjectName}-postgres-cluster"
 
-  EcsCluster:
-    Type: AWS::ECS::Cluster
-    Properties:
-      ClusterName: !Sub "${ProjectName}-cluster"
-  
-  AuroraCluster:
-    Type: AWS::RDS::DBCluster
-    Properties:
-      DBClusterIdentifier: !Sub "${ProjectName}-postgres-cluster"
-      Engine: aurora-postgresql
-      EngineVersion: 16.6
-      DatabaseName: !Ref DatabaseName
-      MasterUsername: finance_docs
-      ManageMasterUserPassword: true
-      EnableHttpEndpoint: true
-      ServerlessV2ScalingConfiguration:
-        MinCapacity: !Ref MinCapacity
-        MaxCapacity: !Ref MaxCapacity
-      DeletionProtection: false
-      Tags:
-        - Key: Name
-          Value: !Sub "${ProjectName}-postgres-cluster"
-
-  AuroraInstance:
-    Type: AWS::RDS::DBInstance
-    Properties:
-      DBInstanceIdentifier: !Sub "${ProjectName}-postgres-instance"
-      DBClusterIdentifier: !Ref AuroraCluster
-      DBInstanceClass: db.serverless
-      Engine: aurora-postgresql
-      Tags:
-        - Key: Name
-          Value: !Sub "${ProjectName}-postgres-instance"
+#  AuroraInstance:
+#    Type: AWS::RDS::DBInstance
+#    Properties:
+#      DBInstanceIdentifier: !Sub "${ProjectName}-postgres-instance"
+#      DBClusterIdentifier: !Ref AuroraCluster
+#      DBInstanceClass: db.serverless
+#      Engine: aurora-postgresql
+#      Tags:
+#        - Key: Name
+#          Value: !Sub "${ProjectName}-postgres-instance"
 
 Outputs:
-  EcsClusterName:
-    Description: "The name of the ECS Cluster"
-    Value: !Ref EcsCluster
-    Export:
-      Name: !Sub '${ProjectName}-ecs-cluster'
-
   InputBucketName:
     Description: "Name of the S3 bucket for input files"
     Value: !Ref InputBucket
     Export:
       Name: !Sub '${ProjectName}-input-bucket'
-
-  OutputBucketName:
-    Description: "Name of the S3 bucket for output files"
-    Value: !Ref InputBucket
-    Export:
-      Name: !Sub '${ProjectName}-output-bucket'
   
-  AuroraClusterArn:
-    Description: "ARN of the Aurora PostgreSQL cluster for Data API access"
-    Value: !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${AuroraCluster}"
-    Export:
-      Name: !Sub '${ProjectName}-aurora-cluster-arn'
-      
-  AuroraClusterEndpoint:
-    Description: "Aurora cluster endpoint"
-    Value: !GetAtt AuroraCluster.Endpoint.Address
-    Export:
-      Name: !Sub '${ProjectName}-aurora-cluster-endpoint'
-      
-  DatabaseSecretArn:
-    Description: "ARN of the database master user secret"
-    Value: !GetAtt AuroraCluster.MasterUserSecret.SecretArn
-    Export:
-      Name: !Sub '${ProjectName}-database-secret-arn'
-      
-  DatabaseName:
-    Description: "Name of the PostgreSQL database"
-    Value: !Ref DatabaseName
-    Export:
-      Name: !Sub '${ProjectName}-database-name'
+#  AuroraClusterArn:
+#    Description: "ARN of the Aurora PostgreSQL cluster for Data API access"
+#    Value: !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${AuroraCluster}"
+#    Export:
+#      Name: !Sub '${ProjectName}-aurora-cluster-arn'
+#      
+#  AuroraClusterEndpoint:
+#    Description: "Aurora cluster endpoint"
+#    Value: !GetAtt AuroraCluster.Endpoint.Address
+#    Export:
+#      Name: !Sub '${ProjectName}-aurora-cluster-endpoint'
+#      
+#  DatabaseSecretArn:
+#    Description: "ARN of the database master user secret"
+#    Value: !GetAtt AuroraCluster.MasterUserSecret.SecretArn
+#    Export:
+#      Name: !Sub '${ProjectName}-database-secret-arn'
+#      
+#  DatabaseName:
+#    Description: "Name of the PostgreSQL database"
+#    Value: !Ref DatabaseName
+#    Export:
+#      Name: !Sub '${ProjectName}-database-name'
