--- a/serverless/document-processor/request-ocr/Makefile
+++ b/serverless/document-processor/request-ocr/Makefile
@@ -6,6 +6,6 @@
 # CGO_ENABLED=0: Disable CGO for static compilation
 # -o bootstrap: Output file name is 'bootstrap'
 # main.go: The main Go source file
-build-getItemsFunction:
+build-RequestOcrFunction:
 	GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -tags lambda.norpc -o bootstrap main.go
 	cp bootstrap $(ARTIFACTS_DIR)
