--- a/serverless/document-processor/samconfig.toml
+++ b/serverless/document-processor/samconfig.toml
@@ -4,7 +4,6 @@ stack_name = "document-processor-local"
 resolve_s3 = true
 s3_prefix = "document-processor-local"
 region = "us-west-2"
-confirm_changeset = true
-capabilities = ["CAPABILITY_IAM", "CAPABILITY_NAMED_IAM"]
+capabilities = ["CAPABILITY_IAM", "CAPABILITY_NAMED_IAM", "CAPABILITY_AUTO_EXPAND"]
 parameter_overrides = "ProjectName=\"document-process-local\" FoundationalModelId=\"anthropic.claude-3-5-haiku-20241022-v1:0\""
 image_repositories = []
