--- a/serverless/document-processor/request-ocr/template.yaml
+++ b/serverless/document-processor/request-ocr/template.yaml
@@ -15,7 +15,7 @@ Parameters:
 Globals:
   Function:
     Timeout: 300 
-    MemorySize: 1024
+    MemorySize: 256
     Runtime: provided.al2023
     Architectures:
       - arm64
@@ -58,7 +58,7 @@ Resources:
       Environment:
         Variables:
           MISTRAL_API_ENDPOINT: !Ref MistralApiEndpoint
-          MISTRAL_API_SECRET: "secret"
+          MISTRAL_API_KEY: "secret"
 
   RequestOcrLogGroup:
     Type: AWS::Logs::LogGroup
