--- a/serverless/document-processor/template.yaml
+++ b/serverless/document-processor/template.yaml
@@ -81,6 +81,7 @@ Resources:
       DefinitionUri: document-processor-state-machine.yaml
       DefinitionSubstitutions:
         RequestOcrFunctionArn: !GetAtt RequestOcrFunction.Outputs.RequestOcrFunctionArn
+        FoundationalModelId: !Ref FoundationalModelId
 
   # Dead Letter Queue for failed processing
   DocumentProcessingDLQ:
